add cors config and add timer creating frontend logic

--- a/front-end/src/app/create-timer/create-timer.component.css
+++ b/front-end/src/app/create-timer/create-timer.component.css
@@ -57,3 +57,8 @@ button:before {
 button:focus, input:focus, textarea:focus {
     outline: none;
 }
+
+button[disabled] {
+    border: 2px solid red;
+    background-color: rgba(0,0,0,.1);
+}
