--- a/front-end/src/app/timer/timer.component.html
+++ b/front-end/src/app/timer/timer.component.html
@@ -1,1 +1,4 @@
-<h1>{{getDays()| number:'2.0'}} {{getHours()| number:'2.0'}}:{{getMinutes()| number:'2.0'}}:{{getSeconds()| number:'2.0'}}</h1>
+<ng-container *ngIf="timer">
+    <h1>{{getDays()| number:'2.0'}} {{getHours()| number:'2.0'}}:{{getMinutes()| number:'2.0'}}:{{getSeconds()| number:'2.0'}}</h1>
+    <div>{{timer.message}}</div>
+</ng-container>
